fix(styles): notification mobile

--- a/src/styles/notification.scss
+++ b/src/styles/notification.scss
@@ -196,6 +196,7 @@ $block: #{$fd-namespace}-notification;
       @include fd-reset();
 
       margin: 0.5rem 0 0;
+      white-space: break-spaces;
     }
   }
 
@@ -238,6 +239,7 @@ $block: #{$fd-namespace}-notification;
     @include fd-reset();
 
     overflow: hidden;
+    height: 100%;
 
     .#{$block}__body {
       padding: 1rem 0.5rem 1rem 1rem;
